security-layer/sleep-in-legacy-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legacy
  labels:
    istio-injection: disabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sleep
  namespace: legacy
spec:
  selector:
    matchLabels:
      app: sleep
  template:
    metadata:
      labels:
        app: sleep
    spec:
      containers:
      - name: sleep
        image: curlimages/curl
        command: ["/bin/sleep", "1d"]
